src/test/ui/match/match-byte-array-patterns-2.stderr
error[E0004]: non-exhaustive patterns: `&[_, _, _, _]` not covered
  --> $DIR/match-byte-array-patterns-2.rs:4:11
   |
LL |     match buf {
   |           ^^^ pattern `&[_, _, _, _]` not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error[E0004]: non-exhaustive patterns: `&[]`, `&[_]`, `&[_, _]` and 3 more not covered
  --> $DIR/match-byte-array-patterns-2.rs:10:11
   |
LL |     match buf {
   |           ^^^ patterns `&[]`, `&[_]`, `&[_, _]` and 3 more not covered
   |
   = help: ensure that all possible cases are being handled, possibly by adding wildcards or more match arms

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0004`.
